glibc (2.22-0experimental3) experimental; urgency=medium

  [ Aurelien Jarno ]
  * Update from upstream stable branch:
    - debian/patches/any/local-CVE-2015-7547.diff: drop, merged upstream.
  * debian/testsuite-xfail-debian.mk: correctly detect Hurd.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 16 Feb 2016 23:16:18 +0100

glibc (2.22-0experimental2) experimental; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/m68k/local-fpic.diff: drop, obsolete.
  * debian/patches/m68k/local-mathinline_h.diff: drop, not applied for a
    lot of time, obsolete.
  * debian/patches/sparc/submitted-timing.diff: drop, obsolete, not
    needed anymore since libc6-sparcv9 has been removed.
  * debian/patches/any/local-no-malloc-backtrace.diff: drop, the real bug
    has been fixed upstream.
  * debian/patches/any/local-no-SOCK_NONBLOCK.diff: drop, both GNU/Hurd
    and GNU/kFreeBSD now support SOCK_NONBLOCK.
  * debian/patches/any/local-libgcc-compat-ports.diff: refresh.
  * debian/patches/any/local-disable-test-tgmath2.diff: drop, 8 years have
    passed, the build daemons should now have enough resources to build
    and run this test.
  * debian/patches/s390/submitted-nexttowardf.diff: drop, fixed upstream
    another way.
  * debian/patches/alpha/submitted-rtld-fPIC.diff: drop, fixed upstream
    another way.
  * debian/patches/any/unsubmitted-scanf-includes.diff: replace the hack by
    the upstream fix patches/any/cvs-bits-libc-stdio-lock.diff. This also
    stop installing <bits/libc-lock.h> and <bits/stdio-lock.h>.  Closes:
    #404532, #639697.
  * debian/control, debian/rules.d/control.mk, debian/sysdeps/arm.mk: remove
    support for the ARM old-ABI architecture, it is not supported upstream
    anymore.
  * debian/sysdeps/*.mk: cleanup and homogenize:
    - define options common to all flavours using the non-flavour specific
      variable.
    - reorganize to not mix generic variables with flavour specific variables.