@@ -3,7 +3,8 @@ glibc (2.22-0experimental3) experimental; urgency=medium
   [ Aurelien Jarno ]
   * Update from upstream stable branch:
     - debian/patches/any/local-CVE-2015-7547.diff: drop, merged upstream.
-  * debian/testsuite-xfail-debian.mk: correctly detect Hurd.
+  * debian/testsuite-xfail-debian.mk: correctly detect Hurd. Mark tests
+    failing to build on Hurd as unsupported.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 16 Feb 2016 23:16:18 +0100
 
